lanecwe-Prod/src/objects/Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <description>competitor for given quote</description>
        <label>Competitor Name</label>
        <picklist>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Type__c</fullName>
        <description>Type of competitor</description>
        <label>Competitor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incumbent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Competitors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Competitor</label>
    <nameField>
        <displayFormat>COMP-{00000}</displayFormat>
        <label>Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>